--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
         exclude module: 'library-anti-distortion'
         //exclude module: 'fly-safe-database'
     })
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     compileOnly 'com.dji:dji-sdk-provided:4.11'
 
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
