--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
     compileOnly 'com.dji:dji-sdk-provided:4.11'
 
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
