--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ dependencies {
 
     //Libraries
     implementation 'com.github.blikoon:QRCodeScanner:0.1.2'
+    implementation('io.socket:socket.io-client:0.8.3') {
+        exclude group: 'org.json', module: 'json'
+    }
 
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.core:core:1.0.0'
