--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/drone_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".LaunchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
