Added google maps sdk and view for mission waypoints (mission not implemented yet)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ android {
     }
 }
 
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.multidex:multidex:2.0.0'
@@ -100,4 +99,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
     implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'com.google.android.gms:play-services:12.0.1'
 }
