--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
     <uses-feature
         android:name="android.hardware.usb.accessory"
         android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
     <application
         android:name=".MApplication"
         android:allowBackup="true"
@@ -79,6 +82,12 @@
                 android:resource="@xml/accessory_filter" />
         </activity>
         <!-- DJI SDK -->
+        <!-- Google Play Services-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAetfbUWNW1JtXz9y5XaVRG16eCfLjdWzo" />
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
