--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,7 @@
         <!-- Google Play Services-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAetfbUWNW1JtXz9y5XaVRG16eCfLjdWzo" />
+            android:value="PUT_API_KEY_HERE" />
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
